# bitcoins-rs

archive/bitcoins/: Cargo.toml
archive/bitcoins/src/enc/: encoder.rs
archive/bitcoins/src/types/: script.rs
bip32/: Cargo.toml
bip32/src/: lib.rs
bitcoins/src/types/: script.rs
core/: Cargo.toml
core/src/: lib.rs  prelude.rs  ser.rs
core/src/enc/: bases.rs
handshakes/src/types/: lockingscript.rs
