[package]
name = "coins-core"
version = "0.7.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Abstract UTXO transactions to enable code reuse across chains"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
bs58 = { version = "0.5", features = [ "check" ] }
bech32 = "0.7"
hex = "0.4"
thiserror = "1.0"
base64 = "0.21"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }

# update in parallel
generic-array = "0.14"
digest = "0.10"
blake2 = { version = "0.10", features = ["reset"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
